--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "npm": "6.9.0",
+    "node": "v10.14.2"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
