--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "styled-components": "^5.1.0"
   },
   "scripts": {
-    "start": "env-cmd react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
