--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "styled-components": "^5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "env-cmd react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "heroku-postbuild": "npm run build"
   },
   "engines": {
     "npm": "6.9.0",
