--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "classnames": "^2.2.6",
     "clsx": "^1.1.0",
     "env-cmd": "^10.1.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
@@ -22,10 +25,10 @@
     "styled-components": "^5.1.0"
   },
   "scripts": {
-    "dev": "env-cmd react-scripts start",
-    "start": "serve -s build",
+    "start": "node server.js",
     "build": "react-scripts build",
-    "heroku-postbuild": "npm run build"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "engines": {
     "npm": "6.9.0",
